Bug 626395.  Make sure that when we're clipping our kids we don't create overflow containers for their overflow.  Force the kids to lay out within our size instead.  Also don't include overflowing kids in our overflow area if we're clipping them.  r=roc, a=blocker